cabal-version:   3.0
name:            phonebook-server
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Amogh Rathore
maintainer:      amoghdroid09@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        MultiParamTypeClasses
        OverloadedRecordDot
        OverloadedStrings
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TypeFamilies
        TypeOperators

common language
    default-language: Haskell2010

library phonebook-server-lib
    import:          warnings, extensions, language
    hs-source-dirs:  src
    exposed-modules:
        API.Phonebook
        DB.SQLite.Contacts
        Types

    other-modules:   Log
    build-depends:
        , aeson                ^>=2.1.1.0
        , base                 ^>=4.16.3.0
        , bytestring           ^>=0.11.3.1
        , cookie               ^>=0.4.6
        , directory            ^>=1.3.8.1
        , exceptions           ^>=0.10.7
        , fast-logger          ^>=3.2.1
        , http-client          ^>=0.7.13.1
        , lens                 ^>=5.2
        , mtl                  ^>=2.2.2
        , random               ^>=1.2.1.1
        , resource-pool        ^>=0.4.0.0
        , servant              ^>=0.19.1
        , servant-auth         ^>=0.4.1.0
        , servant-auth-server  ^>=0.4.7.0
        , servant-client       ^>=0.19
        , servant-server       ^>=0.19.2
        , sqlite-simple        ^>=0.4.18.2
        , text                 ^>=2.0.1
        , time                 ^>=1.12.2
        , uuid                 ^>=1.3.15
        , wai                  ^>=3.2.3
        , warp                 ^>=3.3.25

executable phonebook-server
    import:         warnings, extensions, language
    main-is:        Main.hs
    build-depends:
        , base                  ^>=4.16.3.0
        , directory             ^>=1.3.8.1
        , phonebook-server-lib
        , wai-logger            ^>=2.4.0
        , warp                  ^>=3.3.25

    hs-source-dirs: app

test-suite test-phonebook-server
    import:         warnings, extensions, language
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Spec.hs
    build-depends:
        , aeson                 ^>=2.1.1.0
        , base                  ^>=4.16.3.0
        , bytestring            ^>=0.11.3.1
        , hspec                 ^>=2.10.8
        , http-client           ^>=0.7.13.1
        , http-types            ^>=0.12.3
        , phonebook-server-lib
        , req                   ^>=3.13.0
        , text                  ^>=2.0.2
        , warp                  ^>=3.3.25
